# Exproblab_Assignment_1

./: CMakeLists.txt  README.md  package.xml
action/: MoveBetweenRooms.action
docs/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
docs/_build/html/: index.html  objects.inv  searchindex.js
docs/_build/html/_modules/stimulus_arch/scripts/: battery_controller.html  planner_controller.html
docs/_build/html/_modules/stimulus_arch/scripts/stimulus_arch/: stimulus_action_controller.html  stimulus_controller.html
docs/_modules/: index.html
docs/_modules/robot_behavior/scripts/: ontology_map_builder.html  robot_surveillance.html
docs/_modules/robot_behavior/scripts/robot_behavior/: robot_behavior_helper.html
docs/_modules/stimulus_arch/scripts/: motion_controller.html
exprob_assignment_1/: CMakeLists.txt  package.xml
exprob_assignment_1/launch/: robot_state.launch
exprob_assignment_1/scripts/: robot_behaviour_helper.py  robot_state.py
launch/: robot_behaviour.launch  robot_state.launch
maps/: topological_map.owl
robot_behavior/: CMakeLists.txt  package.xml  setup.py
robot_behavior/launch/: ontology_map_builder.launch  robot_surveillance.launch
robot_behavior/maps/: topological_map.owl
robot_behavior/scripts/: ontology_map_builder.py  robot_surveillance.py
robot_behavior/scripts/robot_behavior/: robot_behavior_helper.py
robot_behaviour/: CMakeLists.txt  package.xml
robot_behaviour/launch/: ontology_map_builder.launch  robot_behaviour.launch  robot_behaviour_surveillance.launch  robot_state.launch  robot_stimulus_provider.launch
robot_behaviour/scripts/: battery_controller.py  command_helper.py  move_controller.py  ontology_map_builder.py  robot_behavior_helper.py  robot_behaviour.py  robot_behaviour_helper.py  robot_behaviour_surveillance.py  robot_state.py  robot_surveillance.py
robot_state_msgs/: CMakeLists.txt  package.xml
robot_state_msgs/action/: ComputePath.action  FollowPath.action  MoveBetweenRooms.action
robot_state_msgs/msg/: RegisterStimulusCommand.msg
robot_state_msgs/srv/: ReferenceName.srv  RoomPosition.srv
scripts/: armor_helper.py  armor_query_client_ext.py  build_ontology.py  robot_behaviour.py  robot_behaviour_helper.py  robot_state.py  test.py  topological_map.owl
sphinx/: conf.py
sphinx/_build/doctrees/: environment.pickle  index.doctree
sphinx/_build/html/: .buildinfo
sphinx/_build/html/_modules/: index.html
sphinx/_build/html/_modules/stimulus_arch/scripts/stimulus_arch/: command_helper.html
sphinx/_build/html/_sources/: index.rst.txt
stimulus_arch/: CMakeLists.txt  package.xml  setup.py
stimulus_arch/launch/: battery_controller.launch  motion_controller.launch  planner_controller.launch
stimulus_arch/scripts/: battery_controller.py  command_helper.py  motion_controller.py  planner_controller.py  stimulus_action_controller.py  stimulus_controller.py
stimulus_arch/scripts/stimulus_arch/: command_helper.py  robot_behavior_helper.py  stimulus_action_controller.py  stimulus_controller.py
